--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "ember-export-application-global": "^2.0.0",
     "ember-ghost": "^1.3.0",
     "ember-ghost-casper-template": "^2.0.4",
+    "ember-light-table": "^1.13.2",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^7.8.1",
     "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
+    "ember-responsive": "^3.0.0",
     "ember-source": "~3.7.0",
     "ember-welcome-page": "^3.2.0",
     "eslint-plugin-ember": "^5.2.0",
